GNU diffutils NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]


* Noteworthy changes in release 3.7 (2018-12-31) [stable]

** Bug fixes

  diff --strip-trailing-cr with a single CR byte in one input file
  would provoke an uninitialized memory read, e.g.,
    diff -a --strip-trailing-cr <(printf '\r') <(echo a)
  [bug introduced in 2.8 with addition of the --strip-trailing-cr option]

** Improvements

  diff --color now produces output compatible with less -R.


* Noteworthy changes in release 3.6 (2017-05-21) [stable]

** New features

  When one file is a prefix of the other, cmp now appends the shorter
  file's size to the EOF diagnostic.

** Bug fixes

  Using an invalid regular expression with --ignore-matching-lines=RE (-I)
  no longer causes stack overflow.  Before, with an invocation like the
  following, diff would diagnose the error, but would still proceed to
  blow the stack: diff -Ia -I\\ <(echo) <(echo b)
  [bug introduced in 2.9]

  diff no longer mishandles line numbers exceeding 2**31 on Mingw-w64.

  the ---presume-output-tty (ostensibly test-only) option would cause
  diff --color to read an uninitialized variable
  [bug introduced in 3.4]

** Performance changes

  diff's default algorithm has been tweaked to deal better with larger
  files, reversing some of the changes made in diffutils-3.4.


* Noteworthy changes in release 3.5 (2016-08-20) [stable]

** Bug fixes

  diff3 no longer malfunctions due to use-after-free
  [bug introduced in 3.4]

  diff --color no longer colorizes when TERM=dumb


* Noteworthy changes in release 3.4 (2016-08-08) [stable]

** New features

   diff accepts two new options --color and --palette to generate
   and configure colored output.  --color takes an optional argument
   specifying when to colorize a line: --color=always, --color=auto,
   --color=never.  --palette is used to configure which colors are used.

** Bug fixes
