@@ -67,6 +67,7 @@ stat
 stat-macros
 stat-time
 stdint
+stdopen
 strcase
 strftime
 strptime
