@@ -10,12 +10,6 @@ echo a > a || fail=1
 echo '0a1
 > a' > exp || fail=1
 
-returns_ 1 diff -N - a <&- > out || fail=1
-compare exp out || fail=1
-
-returns_ 1 diff --unidirectional-new-file - a <&- > out || fail=1
-compare exp out || fail=1
-
 returns_ 1 diff -N b - < a > out || fail=1
 compare exp out || fail=1
 
@@ -24,14 +18,6 @@ compare exp out || fail=1
 
 echo '1d0
 < a' > exp || fail=1
-
-returns_ 1 diff -N a - <&- > out || fail=1
-compare exp out || fail=1
-
-# With closed standard input, require an exit status of 2
-# and empty stdout.
-returns_ 2 diff --unidirectional-new-file a - <&- > out || fail=1
-compare /dev/null out || fail=1
 
 returns_ 1 diff -N - b < a > out || fail=1
 compare exp out || fail=1
